# novel-dubber

./: .gitignore  README.md  config.yaml  pyproject.toml
scripts/: asr_faster_whisper.py  diarize_simple.py  llm_smoke.py  tts_one_line.py
src/novel_dubber/: __init__.py  alignment.py  asr.py  audio_preprocess.py  character_discovery.py  cli.py  config.py  diarization.py  labeling.py  llm_client.py  logging_utils.py  merge.py  stitch.py  text_mode.py  translation.py  tts.py  utils.py  voice_assign.py  voice_catalog.py  voice_refs.py
src/novel_dubber.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_smoke.py
voices/: catalog.yaml
